tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/gateway/HTTP/to_naked.echo/_test_context/Gateway-VirtualService.3924316387.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-88348
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: naked.echo-2-88348.svc.cluster.local
  namespace: echo-2-88348
spec:
  gateways:
  - gateway
  hosts:
  - naked.echo-2-88348.svc.cluster.local
  http:
  - route:
    - destination:
        host: naked.echo-2-88348.svc.cluster.local
        port:
          number: 80
